--- a/book_man.F74A86EC/x64/Debug/qt/qmake/qtvars.vcxproj
+++ b/book_man.F74A86EC/x64/Debug/qt/qmake/qtvars.vcxproj
@@ -33,7 +33,7 @@
   </PropertyGroup>
   <ItemDefinitionGroup Condition="&apos;$(Configuration)|$(Platform)&apos;==&apos;Debug|x64&apos;">
     <ClCompile>
-      <AdditionalIncludeDirectories>D:\univercity\data_struct\book_manage_system\book_man.F74A86EC\x64\Debug\qt\qmake;C:\Qt\6.9.1\msvc2022_64\include;C:\Qt\6.9.1\msvc2022_64\include\QtWidgets;C:\Qt\6.9.1\msvc2022_64\include\QtGui;C:\Qt\6.9.1\msvc2022_64\include\QtCore;D:\univercity\data_struct\book_manage_system\book_man.F74A86EC\x64\Debug\qt\qmake;/include;C:\Qt\6.9.1\msvc2022_64\mkspecs\win32-msvc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\univercity\data_struct\book_manage\book_manage_system\book_man.F74A86EC\x64\Debug\qt\qmake;C:\Qt\6.9.1\msvc2022_64\include;C:\Qt\6.9.1\msvc2022_64\include\QtWidgets;C:\Qt\6.9.1\msvc2022_64\include\QtGui;C:\Qt\6.9.1\msvc2022_64\include\QtCore;D:\univercity\data_struct\book_manage\book_manage_system\book_man.F74A86EC\x64\Debug\qt\qmake;/include;C:\Qt\6.9.1\msvc2022_64\mkspecs\win32-msvc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AdditionalOptions>-Zc:rvalueCast -Zc:inline -Zc:strictStrings -Zc:throwingNew -permissive- -Zc:__cplusplus -Zc:externConstexpr -utf-8 %(AdditionalOptions)</AdditionalOptions>
       <AssemblerListingLocation>.\</AssemblerListingLocation>
       <BrowseInformation>false</BrowseInformation>
