--- a/book_manage_system.vcxproj
+++ b/book_manage_system.vcxproj
@@ -93,6 +93,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="book.cpp" />
+    <ClCompile Include="dataprocess.cpp" />
     <ClCompile Include="date.cpp" />
     <ClCompile Include="history.cpp" />
     <ClCompile Include="people.cpp" />
@@ -110,8 +111,9 @@
     <QtMoc Include="Login.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="background.h" />
+    <QtMoc Include="backword.h" />
     <ClInclude Include="book.h" />
+    <QtMoc Include="Data Processing Layer.h" />
     <ClInclude Include="date.h" />
     <ClInclude Include="history.h" />
     <ClInclude Include="people.h" />
