漏了一个构造函数、此次提交改正。

--- a/book_manage_system.vcxproj
+++ b/book_manage_system.vcxproj
@@ -92,6 +92,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="backword.cpp" />
     <ClCompile Include="book.cpp" />
     <ClCompile Include="dataprocess.cpp" />
     <ClCompile Include="date.cpp" />
