调出用户信息

--- a/book_manage_system.vcxproj.filters
+++ b/book_manage_system.vcxproj.filters
@@ -79,6 +79,9 @@
     <ClCompile Include="backword.cpp">
       <Filter>Source Files\backword</Filter>
     </ClCompile>
+    <ClCompile Include="sqlite-amalgamation-3500200\sqlite3.c">
+      <Filter>Source Files\backword</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtUic Include="Login.ui">
@@ -117,6 +120,9 @@
     </ClInclude>
     <ClInclude Include="people.h">
       <Filter>Header Files\data_process</Filter>
+    </ClInclude>
+    <ClInclude Include="sqlite-amalgamation-3500200\sqlite3.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
