添加一个.ui文件啊、为了代码合并、提交一次。

--- a/book_manage_system.vcxproj
+++ b/book_manage_system.vcxproj
@@ -108,6 +108,7 @@
     <ClCompile Include="main.cpp" />
     <QtUic Include="Login.ui" />
     <QtUic Include="manager.ui" />
+    <QtUic Include="register.ui" />
     <QtUic Include="user_menu.ui" />
   </ItemGroup>
   <ItemGroup>
