除添加图书信息的页面全部完成、完成了用户功能的逻辑调用。

--- a/book_manage_system.vcxproj.filters
+++ b/book_manage_system.vcxproj.filters
@@ -85,6 +85,9 @@
     <ClCompile Include="sqlite-amalgamation-3500200\sqlite3.c">
       <Filter>Source Files\backword</Filter>
     </ClCompile>
+    <ClCompile Include="register.cpp">
+      <Filter>Source Files\front</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtUic Include="Login.ui">
@@ -117,6 +120,9 @@
       <Filter>Header Files\data_process</Filter>
     </QtMoc>
     <QtMoc Include="manager.h">
+      <Filter>Header Files\front</Filter>
+    </QtMoc>
+    <QtMoc Include="register.h">
       <Filter>Header Files\front</Filter>
     </QtMoc>
   </ItemGroup>
