--- a/book_manage_system.vcxproj
+++ b/book_manage_system.vcxproj
@@ -99,6 +99,7 @@
     <ClCompile Include="history.cpp" />
     <ClCompile Include="manager.cpp" />
     <ClCompile Include="people.cpp" />
+    <ClCompile Include="register.cpp" />
     <ClCompile Include="sqlite-amalgamation-3500200\sqlite3.c" />
     <ClCompile Include="user_menu.cpp" />
     <QtRcc Include="book_manage_system.qrc" />
@@ -116,6 +117,7 @@
     <QtMoc Include="Login.h" />
   </ItemGroup>
   <ItemGroup>
+    <QtMoc Include="register.h" />
     <ClInclude Include="sqlite-amalgamation-3500200\sqlite3.h" />
     <QtMoc Include="backword.h" />
     <ClInclude Include="book.h" />
