对用户界面显示表格的功能写了函数

--- a/book_manage_system.vcxproj.filters
+++ b/book_manage_system.vcxproj.filters
@@ -140,7 +140,7 @@
       <Filter>Header Files\data_process</Filter>
     </ClInclude>
     <ClInclude Include="sqlite-amalgamation-3500200\sqlite3.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\backword</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
